<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="@string/settings_key_screen">

    <PreferenceCategory
        android:key="@string/settings_key_category_general"
        android:title="@string/settings_category_general">

        <Preference
            android:title="@string/settings_title_version"
            android:key="@string/settings_key_version"/>

    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_category_lottery">

        <CheckBoxPreference
            android:key="@string/settings_key_plus"
            android:title="@string/settings_title_plus"
            android:summary="@string/settings_summary_plus"
            android:persistent="true"/>

    </PreferenceCategory>

</PreferenceScreen>