<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linLayoutResultBreakdownTable"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/resultBreakdownTableTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textColor="@color/dark_text_secondary"
        android:textSize="@dimen/font_size_small"
        android:fontFamily="sane-serif-medium"
        android:gravity="center">
    </TextView>

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewResultBreakdownTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        app:cardElevation="2dp"
        app:cardCornerRadius="4dp"
        app:cardBackgroundColor="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:orientation="vertical">

            <TableLayout
                android:id="@+id/resultBreakdownTable"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TableRow
                    style="@style/TableRowResultBreakdown"
                    android:id="@+id/tableRowHeadings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        style="@style/TableValueResultBreakdown"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/primary"
                        android:text="@string/table_title_match"/>

                    <TextView
                        style="@style/TableValueResultBreakdown"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/primary"
                        android:text="@string/table_title_winners"/>

                    <TextView
                        style="@style/TableValueResultBreakdown"
                        android:fontFamily="sans-serif-medium"
                        android:textColor="@color/primary"
                        android:text="@string/table_title_prize"/>

                </TableRow>
            </TableLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>